refactor: Use stream API and getLast() in MedicareCalculator
Address PR review comment:
- Replace for loop with IntStream for bracket lookup
- Use List.getLast() instead of get(size-1)
- Remove unused DEFAULT_PART_B_BASE constant

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>